--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,14 @@ dependencies:
   firebase_auth: ^0.16.1
   google_sign_in: ^4.5.1
   flutter_youtube: "^2.0.0"
-  shimmer: ^1.1.1
-  badges: ^1.0.0
-  like_button: ^1.0.1
+
   #reso
   get_it: ^4.0.4
   flutter_bloc: ^5.0.1
   equatable: ^1.2.3
   dartz: ^0.9.1
   http: ^0.12.2
+  meta: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -54,30 +53,3 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
